# DRFTrabajo

./: .gitignore  LICENSE  README.md  main.py  setup.cfg
src/DRFTrabajo/FixedIncome/: CLBond.py  Coupons.py  __init__.py
src/DRFTrabajo/funcs/uf/: __init__.py  get_ufs.py
