[metadata]
name = DRFTrabajo
author = DSZ inc.
author_email = g.delpino@outlook.com
version = 0.1.1
description = simple practical tools for fixed income derivatives
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DSZInc/easyFixedIncome
license_files = file: LICENSE
keywords = valorizador
classifiers = 
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir=
    = src
packages=find:
python_requires = >=3.10
install_requires =
    numpy
    scipy
    datetime

[options.packages.find]
where=src
exclude =
    tests